--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ plugins {
 }
 
 android {
-    namespace 'com.loc.newsapp'
+    namespace 'com.loc.wibuapp'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.loc.newsapp"
+        applicationId "com.loc.wibuapp"
         minSdk 24
         targetSdk 33
         versionCode 1
